# CaelanLogger

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ENGINEERING.md  README.md
.github/workflows/: ci.yaml
CaelanLogger/: CMakeLists.txt  CaelanLogger.cpp  CaelanLogger.h
CaelanLogger/include/: AsycLogger.h  AsyncLogger.h  BackendLogger.h  Buffer.h  FileUtil.h  Level.h  LogStream.h  Message.h  SpinGuard.h  ThreadLogger.h  TimeUtil.h
CaelanLogger/source/: BackendLogger.cpp  Buffer.cpp  FileUtil.cpp  LogStream.cpp  Message.cpp  ThreadLogger.cpp  TimeUtil.cpp
CaelanLogger/tests/: Benchmark.cpp  run_bench_100.py  test_Intergration.cpp  test_Logstream.cpp  test_Time.cpp
bench_runs/: bench_results.csv  bench_summary.csv
bench_runs/raw/: run_0001.txt  run_0002.txt  run_0003.txt  run_0004.txt  run_0005.txt  run_0006.txt  run_0007.txt  run_0008.txt  run_0009.txt  run_0010.txt  run_0011.txt  run_0012.txt  run_0013.txt  run_0014.txt  run_0015.txt  run_0016.txt  run_0017.txt  run_0018.txt  run_0019.txt  run_0020.txt  run_0021.txt  run_0022.txt  run_0023.txt  run_0024.txt  run_0025.txt  run_0026.txt  run_0027.txt  run_0028.txt  run_0029.txt  run_0030.txt  run_0031.txt  run_0032.txt  run_0033.txt  run_0034.txt  run_0035.txt  run_0036.txt  run_0037.txt  run_0038.txt  run_0039.txt  run_0040.txt  (+60 more)
build_asan/: CMakeCache.txt  CTestTestfile.cmake  Makefile  caelogger_tests[1]_include.cmake  caelogger_tests[1]_tests.cmake  cmake_install.cmake  compile_commands.json
build_asan/CaelanLogger/: Makefile  cmake_install.cmake
